[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/enemy/slime-move-3.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/slime-move-1.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/slime-move-2.png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/slime-move-0.png" type="Texture" id=4]
[ext_resource path="res://assets/enemy/slime-die-0.png" type="Texture" id=5]
[ext_resource path="res://assets/enemy/slime-die-1.png" type="Texture" id=6]
[ext_resource path="res://assets/enemy/slime-die-2.png" type="Texture" id=7]
[ext_resource path="res://assets/enemy/slime-die-3.png" type="Texture" id=8]
[ext_resource path="res://Enemy.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 6 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "move"
frame = 1
playing = true
offset = Vector2( 0, -11.5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="FloorDetector" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -6 )
shape = SubResource( 3 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -6 )
shape = SubResource( 4 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_shape_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_shape_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
